--- a/css/styles.css
+++ b/css/styles.css
@@ -351,14 +351,14 @@ div[data-customizeMenu] section:first-of-type:has(input[value="outerboom"]:check
 
 div[data-customizeMenu] section:first-of-type:has(input[value="innerring"]:checked)>label:first-of-type,
 div[data-customizeMenu] section:first-of-type:has(input[value="innerboom"]:checked)>label:nth-of-type(2),
-div[data-customizeMenu] section:first-of-type:has(input[value="outerboom"]:checked)>label:nth-of-type(3)  {
+div[data-customizeMenu] section:first-of-type:has(input[value="outerboom"]:checked)>label:nth-of-type(3) {
     background-color: #C28B1F;
     padding: .5em 1em;
     border-radius: 2px;
     color: white;
 }
 
-section > label {
+section>label {
     cursor: pointer;
     padding: .5em 1em;
     border-radius: 2px;
@@ -366,12 +366,12 @@ section > label {
     color: white;
 }
 
-section > label > input {
+section>label>input {
     display: none;
 
 }
 
-section > label:hover {
+section>label:hover {
     background-color: #e4c892;
     border: none;
     color: black;
@@ -560,4 +560,121 @@ body:has(input[value="outerboom-animatie-blur"]:checked) main section:nth-of-typ
 body:has(input[value="innerboom-animatie-knetter"]:checked) main section:nth-of-type(2) div,
 body:has(input[value="outerboom-animatie-knetter"]:checked) main section:nth-of-type(3) div {
     animation: Spark var(--animation-dur) ease-in-out;
+}
+
+
+@keyframes wave {
+    0%, 100% {
+        font-style: italic;
+        font-weight: normal;
+    }
+
+    25% {
+        font-style: italic;
+        font-weight: bold;
+    }
+
+    50% {
+        font-style: normal;
+        font-weight: bold;
+    }
+
+    75% {
+        font-style: italic;
+        font-weight: bold;
+    }
+}
+
+
+@keyframes rainbow {
+    0% {
+        color: #ff0000;
+    }
+
+    10% {
+        color: #ff7700;
+    }
+
+    20% {
+        color: #ffee00;
+    }
+
+    30% {
+        color: #00ff00;
+    }
+
+    40% {
+        color: #0077ff;
+    }
+
+    50% {
+        color: #ee00ff;
+    }
+
+    60% {
+        color: #ff00ff;
+    }
+
+    70% {
+        color: #ff0077;
+    }
+
+    80% {
+        color: #ff7700;
+    }
+
+    90% {
+        color: #ffee00;
+    }
+    100% {
+        color: #00ff00;
+    }
+}
+
+/* Stijl elke letter individueel */
+h1 {
+    font-size: 3rem;
+    text-align: center;
+
+}
+
+h1 span {
+    height: 1em;
+    aspect-ratio: 1;
+    display: inline-block;
+    animation: rainbow 10s infinite,
+        wave 2s infinite;
+}
+
+/* Animatie voor elke letter */
+h1 span:nth-child(1) {
+    animation-delay: 0s;
+}
+
+h1 span:nth-child(2) {
+    animation-delay: 0.1s;
+}
+
+h1 span:nth-child(3) {
+    animation-delay: 0.2s;
+}
+
+h1 span:nth-child(4) {
+    animation-delay: 0.3s;
+}
+
+h1 span:nth-child(5) {
+    animation-delay: 0.4s;
+}
+
+h1 span:nth-child(6) {
+    animation-delay: 0.5s;
+}
+
+h1 span:nth-child(7) {
+    animation-delay: 0.6s;
+}
+
+h1 span:nth-child(8) {
+    animation-delay: 0.7s;
 }
